Fixed z-indexes, fixed compact navbar

--- a/styles/components/formInput.module.css
+++ b/styles/components/formInput.module.css
@@ -7,7 +7,6 @@
 .title {
     font-weight: bold;
     color: #c25c0e;
-    z-index: 1;
 }
 
 .warning-true {
