--- a/styles/components/navbar/compact.module.css
+++ b/styles/components/navbar/compact.module.css
@@ -3,25 +3,16 @@
 ======================================================================*/
 
 /* Extra small devices (portrait phones, 280px and up) */
-@media (min-width: 280px) {
-    .logo {
-        height: calc(100% - 50px);
-    }
-}
+@media (min-width: 280px) { }
 
 /* Small devices (landscape phones, 576px and up) */
-@media (min-width: 576px) { 
-    .logo {
-        height: calc(100% - 30px);
-    }
-}
+@media (min-width: 576px) { }
 
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) { }
 
 /* Large devices (desktops, 992px and up) */
-@media (min-width: 992px) { 
-}
+@media (min-width: 992px) { }
 
 /* Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) { }
@@ -40,7 +31,7 @@
 .topContainer {
     display: flex;
     background-color: white;
-    height: 100px;
+    height: 90px;
     border-bottom: 1px solid black;
 }
 
@@ -51,6 +42,7 @@
     display: flex;
     flex-direction: row;
     padding: 0px 15px;
+    height: 100%;
 }
 
 /*======================================================================
@@ -82,6 +74,7 @@
 .logo {
     margin: auto 0px;
     width: auto;
+    height: 40px;
 }
 
 /*======================================================================
@@ -91,13 +84,13 @@
     position: absolute;
     left: 0px;
     width: 100vw;
-    height: 100%;
+    height: calc(100vh - 90px);
     background-color: #00000099;
 }
 
 .menuContainer {
     position: absolute;
-    top: 100px;
+    top: 90px;
     right: 0px;
     width: 100%;
     max-width: 320px;
